--- a/src/Arduinode.sass
+++ b/src/Arduinode.sass
@@ -133,7 +133,6 @@ header
 .footer
     bottom: 0
     top: auto
-    z-index: 2 
     h3
         position: absolute
         color: #fff
@@ -250,6 +249,7 @@ table.salidas
 
     .temporizadatrue 
         span
+            left: 31px !important
             color: #fff
 
         .switch:after
