--- a/src/_elementos.sass
+++ b/src/_elementos.sass
@@ -48,9 +48,11 @@ table
     margin-right: 12px
     
     li 
+        position: relative
         margin-left: 30px
-        font-size: 1.8em
+        font-size: 1.9em
 
-.footer 
-    .listIcons .Microfono
-        margin-top: 7px
+.footer
+    .listIcons
+        .Microfono
+            margin-top: 7px
