Fix separacion en lista de tareas

--- a/src/Arduinode.sass
+++ b/src/Arduinode.sass
@@ -314,6 +314,9 @@ table.salidas
             margin-top: 8px
 
     tr 
+        margin-bottom: 23px
+        display: block
+        height: auto
         td:last-child
             display: block
             height: 68px
